updated domain entity list to be a real listview

--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_endpoint_entry.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_endpoint_entry.xml
@@ -115,7 +115,9 @@
         android:id="@+id/btn_next"
         android:text="@string/next"
         android:onClick="clickNext"
-        style="@style/ButtonNext"/>
+        android:clickable="false"
+        style="@style/ButtonNext"
+        android:enabled="false"/>
     <Button
         android:id="@+id/btn_offline"
         android:text="@string/use_offline"
