--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/styles.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/styles.xml
@@ -46,6 +46,8 @@
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:divider">@color/LightGrey</item>
+    <item name="android:showDividers"></item>
+
     <item name="android:dividerHeight">2dp</item>
   </style>
 
