updated with new formatting and shadows

--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout-land/activity_display_cluster.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout-land/activity_display_cluster.xml
@@ -32,12 +32,13 @@
         android:id="@+id/chart_parent"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:baselineAligned="false">
 
       <RelativeLayout
-          android:layout_width="fill_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_weight="1"
           style="@style/Card_Layout">
 
         <fragment
@@ -51,8 +52,9 @@
       </RelativeLayout>
 
       <RelativeLayout
-          android:layout_width="fill_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_weight="1"
           style="@style/Card_Layout">
 
         <fragment
