--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout-land/activity_display_server.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout-land/activity_display_server.xml
@@ -22,75 +22,78 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/LightGrey"
-    tools:context=".DisplayServer"
-    >
+    style="@style/DisplayEntity_Backdrop"
+    tools:context=".DisplayServer">
 
   <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="5dp"
-      android:orientation="vertical">
+      style="@style/DisplayEntity_Parent">
 
-    <TextView
-        android:id="@+id/monitor_header"
-        android:text="@string/monitor_server_header"
-        style="@style/DisplayEntityHeader"/>
-
-    <!--
-      Heap Chart...
-    -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
-      <fragment
-          android:name="com.jeffreyawest.weblogic.monitor.charting.fragment.CPUChartFragment"
-          android:id="@+id/cpu_chart_fragment"
+      <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:layout_margin="5dp"
-          tools:layout="@layout/chart_view"/>
+          style="@style/Card_Layout">
 
-      <fragment
-          android:name="com.jeffreyawest.weblogic.monitor.charting.fragment.HeapChartFragment"
-          android:id="@+id/heap_chart_fragment"
+        <fragment
+            android:name="com.jeffreyawest.weblogic.monitor.charting.JVMCPUPieChart"
+            android:id="@+id/cpu_chart_fragment"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/container_dropshadow"
+          tools:layout="@layout/chart_view_cpu"/>
+
+      </RelativeLayout>
+
+      <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:layout_margin="5dp"
-          tools:layout="@layout/chart_view"/>
+          style="@style/Card_Layout">
+
+        <fragment
+            android:name="com.jeffreyawest.weblogic.monitor.charting.JVMHeapPieChart"
+            android:id="@+id/heap_chart_fragment"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/container_dropshadow"
+          tools:layout="@layout/chart_view_heap"/>
+      </RelativeLayout>
+
     </LinearLayout>
 
     <!-- TEXT DATA -->
 
-    <TextView
-        android:text="@string/server_information"
-        style="@style/EntityInformationHeader"/>
+    <LinearLayout
+        style="@style/Card_Layout">
+
+      <TextView
+          android:text="@string/server_information"
+          style="@style/Card_Header"/>
+
+      <TableLayout
+          android:id="@+id/display_entity_detail_table"
+          style="@style/DisplayEntity_DetailTable"/>
+
+    </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/data_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        style="@style/Card_Layout">
 
-    <TextView
-        android:text="@string/original_json"
-        style="@style/OriginalJSONLabel"/>
+      <TextView
+          android:text="@string/original_json"
+          style="@style/Card_Header"/>
 
-    <TextView
-        android:id="@+id/original_json"
-        android:text="@string/loading"
-        style="@style/OriginalJSON"/>
+      <TextView
+          android:id="@+id/original_json"
+          android:text="@string/loading"
+          style="@style/OriginalJSON"/>
 
+    </LinearLayout>
   </LinearLayout>
 </ScrollView>
