--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_display_application.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_display_application.xml
@@ -22,67 +22,43 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    tools:context=".MonitorApplication">
+    style="@style/DisplayEntity_Backdrop"
+    tools:context=".DisplayApplication">
 
   <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical">
+      style="@style/DisplayEntity_Parent">
 
-    <TextView
-        android:id="@+id/monitor_header"
-        style="@style/DisplayEntityHeader"
-        android:text="Application: (loading)"/>
-
-    <LinearLayout
-        android:id="@+id/chart_parent"
-        android:layout_height="wrap_content"
+    <fragment
+        android:name="com.jeffreyawest.weblogic.monitor.charting.ApplicationTargetStatePieChart"
+        android:id="@+id/app_target_state_chart_fragment"
         android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        tools:layout="@layout/chart_view"/>
 
-      <LinearLayout
-          android:id="@+id/target_state_chart_parent"
-          android:layout_height="wrap_content"
-          android:layout_width="0dp"
-          android:layout_weight="1"
-          android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/target_state_chart_header"
-            android:text="Target States"
-            style="@style/EntityGraphHeader"/>
-
-        <LinearLayout
-            android:id="@+id/target_state_chart"
-            android:layout_height="300dp"
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"/>
-      </LinearLayout>
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/data_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:shrinkColumns="1"
+        android:background="@color/white"
         android:orientation="vertical"/>
 
-    <TextView
-        android:text="@string/original_json"
-        style="@style/OriginalJSONLabel"/>
+    <LinearLayout
+        style="@style/Card_Layout">
 
-    <TextView
-        android:id="@+id/original_json"
-        style="@style/OriginalJSON"
-        android:text="@string/loading"/>
+      <TextView
+          android:text="@string/original_json"
+          style="@style/Card_Header"/>
+
+      <TextView
+          android:id="@+id/original_json"
+          style="@style/OriginalJSON"
+          android:text="@string/loading"/>
+
+    </LinearLayout>
+
   </LinearLayout>
 
 </ScrollView>
