--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_list_entity.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_list_entity.xml
@@ -15,25 +15,23 @@
   ~ ***************************************************************************
   -->
 
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:id="@+id/main_conatiner"
-    android:orientation="vertical"
-    tools:context=".ListEntityActivity">
+    style="@style/Backdrop"
+    tools:context=".ListEntity">
 
-  <TextView
-      android:id="@+id/header"
-      style="@style/ListEntityHeader"/>
+  <LinearLayout
+      style="@style/DisplayEntity_Parent">
 
-  <ListView
-      android:id="@android:id/list"
-      style="@style/ListEntityListView"/>
+    <TextView
+        android:id="@+id/header"
+        style="@style/ListEntityHeader"/>
 
-</LinearLayout>
+    <ListView
+        android:id="@android:id/list"
+        style="@style/ListEntityListView"/>
+
+  </LinearLayout>
+
+</ScrollView>
