--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_app_target_state.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_app_target_state.xml
@@ -17,35 +17,36 @@
   ~ ***************************************************************************
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:background="@color/white"
-              android:padding="5dp"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:background="@color/white"
+    android:padding="5dp"
+    android:layout_height="match_parent">
 
   <TextView
-      android:id="@+id/heap_chart_header"
+      android:id="@+id/app_target_state_chart_header"
       style="@style/GraphFragment_Header"
-      android:text="CHART HEADER!"
-      />
+      android:text="JVM CPU"/>
 
 
   <LinearLayout
       android:orientation="horizontal"
-      android:layout_width="wrap_content"
+      android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:padding="5dp"
       android:baselineAligned="false">
 
     <LinearLayout
-        android:id="@+id/heap_chart_graphic"
+        android:id="@+id/app_target_state_chart_graphic"
         android:orientation="horizontal"
         android:layout_weight="1"
         style="@style/GraphFragment_Graphic"/>
 
     <TableLayout
-        android:id="@+id/heap_chart_legend"
+        android:id="@+id/app_target_state_chart_legend"
+        android:layout_weight="2"
         style="@style/ListEntityListView"/>
 
   </LinearLayout>
