--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_cpu.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_cpu.xml
@@ -17,23 +17,23 @@
   ~ ***************************************************************************
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:background="@color/white"
-              android:padding="5dp"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:background="@color/white"
+    android:padding="5dp"
+    android:layout_height="match_parent">
 
   <TextView
       android:id="@+id/cpu_chart_header"
       style="@style/GraphFragment_Header"
-      android:text="JVM CPU"
-      />
+      android:text="JVM CPU"/>
 
 
   <LinearLayout
       android:orientation="horizontal"
-      android:layout_width="wrap_content"
+      android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:padding="5dp"
       android:baselineAligned="false">
@@ -46,6 +46,7 @@
 
     <TableLayout
         android:id="@+id/cpu_chart_legend"
+        android:layout_weight="2"
         style="@style/ListEntityListView"/>
 
   </LinearLayout>
