--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_heap.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/chart_view_heap.xml
@@ -17,18 +17,18 @@
   ~ ***************************************************************************
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:background="@color/white"
-              android:padding="5dp"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:background="@color/white"
+    android:padding="5dp"
+    android:layout_height="match_parent">
 
   <TextView
-      android:id="@+id/cpu_chart_header"
+      android:id="@+id/heap_chart_header"
       style="@style/GraphFragment_Header"
-      android:text="JVM CPU"
-      />
+      android:text="CHART HEADER!"/>
 
 
   <LinearLayout
@@ -39,13 +39,13 @@
       android:baselineAligned="false">
 
     <LinearLayout
-        android:id="@+id/cpu_chart_graphic"
+        android:id="@+id/heap_chart_graphic"
         android:orientation="horizontal"
-        android:layout_weight="1"
         style="@style/GraphFragment_Graphic"/>
 
     <TableLayout
-        android:id="@+id/cpu_chart_legend"
+        android:id="@+id/heap_chart_legend"
+        android:layout_weight="8"
         style="@style/ListEntityListView"/>
 
   </LinearLayout>
