--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/list_item_server.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/list_item_server.xml
@@ -22,8 +22,7 @@
     style="@style/ListItemRelativeLayout">
 
   <LinearLayout
-      android:id="@+id/text_area"
-      android:layout_width="fill_parent"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_centerVertical="true"
