--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/colors.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/colors.xml
@@ -35,8 +35,8 @@
   <color name="state_critical">#FFA500</color>
   <color name="state_failed">#FF0000</color>
 
-  <color name="heap_unused">#3CB371</color>
-  <color name="heap_alloc_unused">#2E8B57</color>
+  <color name="heap_unused">#2E8B57</color>
+  <color name="heap_alloc_unused">#3CB371</color>
   <color name="heap_alloc_used">#DC143C</color>
 
   <color name="cpu_used">#DC143C</color>
@@ -65,6 +65,273 @@
   <color name="blue">#0000FF</color>
   <color name="navy">#000080</color>
   <color name="black">#000000</color>
+
+  <color name="LightSlateGray">#778899</color>
+  <color name="SlateGray">#708090</color>
+  <color name="Gray">#808080</color>
+  <color name="DimGray">#696969</color>
+  <color name="DarkSlateGray">#2F4F4F</color>
+  <color name="DarkGray">#A9A9A9</color>
+
+
+  <!-- Grayscale -->
+  <color name="Gray0">#FFFFFF</color>
+  <color name="Gray1">#FEFEFE</color>
+  <color name="Gray2">#FDFDFD</color>
+  <color name="Gray3">#FCFCFC</color>
+  <color name="Gray4">#FBFBFB</color>
+  <color name="Gray5">#FAFAFA</color>
+  <color name="Gray6">#F9F9F9</color>
+  <color name="Gray7">#F8F8F8</color>
+  <color name="Gray8">#F7F7F7</color>
+  <color name="Gray9">#F6F6F6</color>
+  <color name="Gray10">#F5F5F5</color>
+  <color name="Gray11">#F4F4F4</color>
+  <color name="Gray12">#F3F3F3</color>
+  <color name="Gray13">#F2F2F2</color>
+  <color name="Gray14">#F1F1F1</color>
+  <color name="Gray15">#F0F0F0</color>
+  <color name="Gray16">#EFEFEF</color>
+  <color name="Gray17">#EEEEEE</color>
+  <color name="Gray18">#EDEDED</color>
+  <color name="Gray19">#ECECEC</color>
+  <color name="Gray20">#EBEBEB</color>
+  <color name="Gray21">#EAEAEA</color>
+  <color name="Gray22">#E9E9E9</color>
+  <color name="Gray23">#E8E8E8</color>
+  <color name="Gray24">#E7E7E7</color>
+  <color name="Gray25">#E6E6E6</color>
+  <color name="Gray26">#E5E5E5</color>
+  <color name="Gray27">#E4E4E4</color>
+  <color name="Gray28">#E3E3E3</color>
+  <color name="Gray29">#E2E2E2</color>
+  <color name="Gray30">#E1E1E1</color>
+  <color name="Gray31">#E0E0E0</color>
+  <color name="Gray32">#DFDFDF</color>
+  <color name="Gray33">#DEDEDE</color>
+  <color name="Gray34">#DDDDDD</color>
+  <color name="Gray35">#DCDCDC</color>
+  <color name="Gray36">#DBDBDB</color>
+  <color name="Gray37">#DADADA</color>
+  <color name="Gray38">#D9D9D9</color>
+  <color name="Gray39">#D8D8D8</color>
+  <color name="Gray40">#D7D7D7</color>
+  <color name="Gray41">#D6D6D6</color>
+  <color name="Gray42">#D5D5D5</color>
+  <color name="Gray43">#D4D4D4</color>
+  <color name="Gray44">#D3D3D3</color>
+  <color name="Gray45">#D2D2D2</color>
+  <color name="Gray46">#D1D1D1</color>
+  <color name="Gray47">#D0D0D0</color>
+  <color name="Gray48">#CFCFCF</color>
+  <color name="Gray49">#CECECE</color>
+  <color name="Gray50">#CDCDCD</color>
+  <color name="Gray51">#CCCCCC</color>
+  <color name="Gray52">#CBCBCB</color>
+  <color name="Gray53">#CACACA</color>
+  <color name="Gray54">#C9C9C9</color>
+  <color name="Gray55">#C8C8C8</color>
+  <color name="Gray56">#C7C7C7</color>
+  <color name="Gray57">#C6C6C6</color>
+  <color name="Gray58">#C5C5C5</color>
+  <color name="Gray59">#C4C4C4</color>
+  <color name="Gray60">#C3C3C3</color>
+  <color name="Gray61">#C2C2C2</color>
+  <color name="Gray62">#C1C1C1</color>
+  <color name="Gray63">#C0C0C0</color>
+  <color name="Gray64">#BFBFBF</color>
+  <color name="Gray65">#BEBEBE</color>
+  <color name="Gray66">#BDBDBD</color>
+  <color name="Gray67">#BCBCBC</color>
+  <color name="Gray68">#BBBBBB</color>
+  <color name="Gray69">#BABABA</color>
+  <color name="Gray70">#B9B9B9</color>
+  <color name="Gray71">#B8B8B8</color>
+  <color name="Gray72">#B7B7B7</color>
+  <color name="Gray73">#B6B6B6</color>
+  <color name="Gray74">#B5B5B5</color>
+  <color name="Gray75">#B4B4B4</color>
+  <color name="Gray76">#B3B3B3</color>
+  <color name="Gray77">#B2B2B2</color>
+  <color name="Gray78">#B1B1B1</color>
+  <color name="Gray79">#B0B0B0</color>
+  <color name="Gray80">#AFAFAF</color>
+  <color name="Gray81">#AEAEAE</color>
+  <color name="Gray82">#ADADAD</color>
+  <color name="Gray83">#ACACAC</color>
+  <color name="Gray84">#ABABAB</color>
+  <color name="Gray85">#AAAAAA</color>
+  <color name="Gray86">#A9A9A9</color>
+  <color name="Gray87">#A8A8A8</color>
+  <color name="Gray88">#A7A7A7</color>
+  <color name="Gray89">#A6A6A6</color>
+  <color name="Gray90">#A5A5A5</color>
+  <color name="Gray91">#A4A4A4</color>
+  <color name="Gray92">#A3A3A3</color>
+  <color name="Gray93">#A2A2A2</color>
+  <color name="Gray94">#A1A1A1</color>
+  <color name="Gray95">#A0A0A0</color>
+  <color name="Gray96">#9F9F9F</color>
+  <color name="Gray97">#9E9E9E</color>
+  <color name="Gray98">#9D9D9D</color>
+  <color name="Gray99">#9C9C9C</color>
+  <color name="Gray100">#9B9B9B</color>
+  <color name="Gray101">#9A9A9A</color>
+  <color name="Gray102">#999999</color>
+  <color name="Gray103">#989898</color>
+  <color name="Gray104">#979797</color>
+  <color name="Gray105">#969696</color>
+  <color name="Gray106">#959595</color>
+  <color name="Gray107">#949494</color>
+  <color name="Gray108">#939393</color>
+  <color name="Gray109">#929292</color>
+  <color name="Gray110">#919191</color>
+  <color name="Gray111">#909090</color>
+  <color name="Gray112">#8F8F8F</color>
+  <color name="Gray113">#8E8E8E</color>
+  <color name="Gray114">#8D8D8D</color>
+  <color name="Gray115">#8C8C8C</color>
+  <color name="Gray116">#8B8B8B</color>
+  <color name="Gray117">#8A8A8A</color>
+  <color name="Gray118">#898989</color>
+  <color name="Gray119">#888888</color>
+  <color name="Gray120">#878787</color>
+  <color name="Gray121">#868686</color>
+  <color name="Gray122">#858585</color>
+  <color name="Gray123">#848484</color>
+  <color name="Gray124">#838383</color>
+  <color name="Gray125">#828282</color>
+  <color name="Gray126">#818181</color>
+  <color name="Gray127">#808080</color>
+  <color name="Gray128">#7F7F7F</color>
+  <color name="Gray129">#7E7E7E</color>
+  <color name="Gray130">#7D7D7D</color>
+  <color name="Gray131">#7C7C7C</color>
+  <color name="Gray132">#7B7B7B</color>
+  <color name="Gray133">#7A7A7A</color>
+  <color name="Gray134">#797979</color>
+  <color name="Gray135">#787878</color>
+  <color name="Gray136">#777777</color>
+  <color name="Gray137">#767676</color>
+  <color name="Gray138">#757575</color>
+  <color name="Gray139">#747474</color>
+  <color name="Gray140">#737373</color>
+  <color name="Gray141">#727272</color>
+  <color name="Gray142">#717171</color>
+  <color name="Gray143">#707070</color>
+  <color name="Gray144">#6F6F6F</color>
+  <color name="Gray145">#6E6E6E</color>
+  <color name="Gray146">#6D6D6D</color>
+  <color name="Gray147">#6C6C6C</color>
+  <color name="Gray148">#6B6B6B</color>
+  <color name="Gray149">#6A6A6A</color>
+  <color name="Gray150">#696969</color>
+  <color name="Gray151">#686868</color>
+  <color name="Gray152">#676767</color>
+  <color name="Gray153">#666666</color>
+  <color name="Gray154">#656565</color>
+  <color name="Gray155">#646464</color>
+  <color name="Gray156">#636363</color>
+  <color name="Gray157">#626262</color>
+  <color name="Gray158">#616161</color>
+  <color name="Gray159">#606060</color>
+  <color name="Gray160">#5F5F5F</color>
+  <color name="Gray161">#5E5E5E</color>
+  <color name="Gray162">#5D5D5D</color>
+  <color name="Gray163">#5C5C5C</color>
+  <color name="Gray164">#5B5B5B</color>
+  <color name="Gray165">#5A5A5A</color>
+  <color name="Gray166">#595959</color>
+  <color name="Gray167">#585858</color>
+  <color name="Gray168">#575757</color>
+  <color name="Gray169">#565656</color>
+  <color name="Gray170">#555555</color>
+  <color name="Gray171">#545454</color>
+  <color name="Gray172">#535353</color>
+  <color name="Gray173">#525252</color>
+  <color name="Gray174">#515151</color>
+  <color name="Gray175">#505050</color>
+  <color name="Gray176">#4F4F4F</color>
+  <color name="Gray177">#4E4E4E</color>
+  <color name="Gray178">#4D4D4D</color>
+  <color name="Gray179">#4C4C4C</color>
+  <color name="Gray180">#4B4B4B</color>
+  <color name="Gray181">#4A4A4A</color>
+  <color name="Gray182">#494949</color>
+  <color name="Gray183">#484848</color>
+  <color name="Gray184">#474747</color>
+  <color name="Gray185">#464646</color>
+  <color name="Gray186">#454545</color>
+  <color name="Gray187">#444444</color>
+  <color name="Gray188">#434343</color>
+  <color name="Gray189">#424242</color>
+  <color name="Gray190">#414141</color>
+  <color name="Gray191">#404040</color>
+  <color name="Gray192">#3F3F3F</color>
+  <color name="Gray193">#3E3E3E</color>
+  <color name="Gray194">#3D3D3D</color>
+  <color name="Gray195">#3C3C3C</color>
+  <color name="Gray196">#3B3B3B</color>
+  <color name="Gray197">#3A3A3A</color>
+  <color name="Gray198">#393939</color>
+  <color name="Gray199">#383838</color>
+  <color name="Gray200">#373737</color>
+  <color name="Gray201">#363636</color>
+  <color name="Gray202">#353535</color>
+  <color name="Gray203">#343434</color>
+  <color name="Gray204">#333333</color>
+  <color name="Gray205">#323232</color>
+  <color name="Gray206">#313131</color>
+  <color name="Gray207">#303030</color>
+  <color name="Gray208">#2F2F2F</color>
+  <color name="Gray209">#2E2E2E</color>
+  <color name="Gray210">#2D2D2D</color>
+  <color name="Gray211">#2C2C2C</color>
+  <color name="Gray212">#2B2B2B</color>
+  <color name="Gray213">#2A2A2A</color>
+  <color name="Gray214">#292929</color>
+  <color name="Gray215">#282828</color>
+  <color name="Gray216">#272727</color>
+  <color name="Gray217">#262626</color>
+  <color name="Gray218">#252525</color>
+  <color name="Gray219">#242424</color>
+  <color name="Gray220">#232323</color>
+  <color name="Gray221">#222222</color>
+  <color name="Gray222">#212121</color>
+  <color name="Gray223">#202020</color>
+  <color name="Gray224">#1F1F1F</color>
+  <color name="Gray225">#1E1E1E</color>
+  <color name="Gray226">#1D1D1D</color>
+  <color name="Gray227">#1C1C1C</color>
+  <color name="Gray228">#1B1B1B</color>
+  <color name="Gray229">#1A1A1A</color>
+  <color name="Gray230">#191919</color>
+  <color name="Gray231">#181818</color>
+  <color name="Gray232">#171717</color>
+  <color name="Gray233">#161616</color>
+  <color name="Gray234">#151515</color>
+  <color name="Gray235">#141414</color>
+  <color name="Gray236">#131313</color>
+  <color name="Gray237">#121212</color>
+  <color name="Gray238">#111111</color>
+  <color name="Gray239">#101010</color>
+  <color name="Gray240">#0F0F0F</color>
+  <color name="Gray241">#0E0E0E</color>
+  <color name="Gray242">#0D0D0D</color>
+  <color name="Gray243">#0C0C0C</color>
+  <color name="Gray244">#0B0B0B</color>
+  <color name="Gray245">#0A0A0A</color>
+  <color name="Gray246">#090909</color>
+  <color name="Gray247">#080808</color>
+  <color name="Gray248">#070707</color>
+  <color name="Gray249">#060606</color>
+  <color name="Gray250">#050505</color>
+  <color name="Gray251">#040404</color>
+  <color name="Gray252">#030303</color>
+  <color name="Gray253">#020202</color>
+  <color name="Gray254">#010101</color>
+  <color name="Gray255">#000000</color>
+
 
   <color name="White">#FFFFFF</color>
   <color name="Ivory">#FFFFF0</color>
@@ -143,7 +410,6 @@
   <color name="PaleTurquoise">#AFEEEE</color>
   <color name="GreenYellow">#ADFF2F</color>
   <color name="LightBlue">#ADD8E6</color>
-  <color name="DarkGray">#A9A9A9</color>
   <color name="Brown">#A52A2A</color>
   <color name="Sienna">#A0522D</color>
   <color name="YellowGreen">#9ACD32</color>
@@ -159,7 +425,6 @@
   <color name="BlueViolet">#8A2BE2</color>
   <color name="LightSkyBlue">#87CEFA</color>
   <color name="SkyBlue">#87CEEB</color>
-  <color name="Gray">#808080</color>
   <color name="Olive">#808000</color>
   <color name="Purple">#800080</color>
   <color name="Maroon">#800000</color>
@@ -167,11 +432,8 @@
   <color name="Chartreuse">#7FFF00</color>
   <color name="LawnGreen">#7CFC00</color>
   <color name="MediumSlateBlue">#7B68EE</color>
-  <color name="LightSlateGray">#778899</color>
-  <color name="SlateGray">#708090</color>
   <color name="OliveDrab">#6B8E23</color>
   <color name="SlateBlue">#6A5ACD</color>
-  <color name="DimGray">#696969</color>
   <color name="MediumAquamarine">#66CDAA</color>
   <color name="CornflowerBlue">#6495ED</color>
   <color name="CadetBlue">#5F9EA0</color>
@@ -184,7 +446,6 @@
   <color name="Turquoise">#40E0D0</color>
   <color name="MediumSeaGreen">#3CB371</color>
   <color name="LimeGreen">#32CD32</color>
-  <color name="DarkSlateGray">#2F4F4F</color>
   <color name="SeaGreen">#2E8B57</color>
   <color name="ForestGreen">#228B22</color>
   <color name="LightSeaGreen">#20B2AA</color>
