--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/dimens.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/dimens.xml
@@ -16,13 +16,71 @@
   -->
 
 <!--
-
  * Created by jeffreyawest
  -->
 <resources>
   <!-- Default screen margins, per the Android Design guidelines. -->
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+
+  <dimen name="endpoint_entry_header_text">25sp</dimen>
+  <dimen name="endpoint_entry_header_padding_bottom">20dp</dimen>
+
+  <dimen name="endpoint_entry_label_width">80dp</dimen>
+  <dimen name="endpoint_entry_label_text">20sp</dimen>
+
+  <dimen name="endpoint_entry_input_text">20sp</dimen>
+
+
+  <dimen name="domain_entity_list_text">60sp</dimen>
+  <dimen name="domain_entity_list_padding">10dp</dimen>
+
+
+  <dimen name="domain_entity_list_chevron">10sp</dimen>
+
+  <dimen name="list_chevron_text">25sp</dimen>
+  <dimen name="list_relative_layout_padding">5dp</dimen>
+
+  <dimen name="list_entity_name_text">25sp</dimen>
+  <dimen name="list_entity_name_padding">5dp</dimen>
+
+  <dimen name="list_entity_details_padding">2dp</dimen>
+  <dimen name="list_entity_details_padding_left">5dp</dimen>
+
+  <dimen name="list_item_table_padding">15dp</dimen>
+  <dimen name="list_item_table_row_padding">2dp</dimen>
+
+
+  <dimen name="list_entity_header_text">35sp</dimen>
+  <dimen name="list_entity_details_text">15sp</dimen>
+
+  <dimen name="list_entity_divider_height">2dp</dimen>
+
+  <dimen name="list_entity_graphic_width_height">25dp</dimen>
+
+  <dimen name="button_next_height">50dp</dimen>
+
+  <dimen name="base_button_height">60dp</dimen>
+  <dimen name="base_button_text">20sp</dimen>
+
+  <dimen name="welcome_text">25sp</dimen>
+  <dimen name="welcome_padding">20sp</dimen>
+
+  <dimen name="graph_fragment_graphic_size">150dp</dimen>
+  <dimen name="graph_fragment_header_text">20sp</dimen>
+  <dimen name="graph_fragment_header_padding">5dp</dimen>
+
+  <dimen name="original_json_text">10sp</dimen>
+  <dimen name="original_json_header_text">20sp</dimen>
+
+
+  <dimen name="activity_display_outer_text">20sp</dimen>
+
+  <dimen name="display_entity_header_text">25sp</dimen>
+  <dimen name="display_entity_header_padding">10dp</dimen>
+
+  <dimen name="card_header_text">20sp</dimen>
+
 
   <dimen name="entity_details_table_text_size">10sp</dimen>
   <dimen name="entity_details_table_header_text_size">14sp</dimen>
