--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_list_domain_entities.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/activity_list_domain_entities.xml
@@ -15,10 +15,18 @@
   ~ ***************************************************************************
   -->
 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    style="@style/Backdrop"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
+
   <ListView
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
       android:id="@android:id/list"
       style="@style/ListEntityListView"
+      android:background="@drawable/container_dropshadow"
       tools:context=".ListDomainEntitiesActivity"/>
 
+</RelativeLayout>
