--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/list_item_server.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/layout/list_item_server.xml
@@ -19,10 +19,11 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ListItemRelativeLayout">
+    style="@style/ListItemRelativeLayout"
+    >
 
   <LinearLayout
-      android:layout_width="wrap_content"
+      android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_centerVertical="true"
